<resources>

    <string name="app_name">BiblioApp</string>
    <string name="menu_prompt">Seleziona un\'opzione</string>
    <string name="registrati_ora"><u>REGISTRATI ORA!</u></string>
    <string name="cambia_username"><u>Cambia Username</u></string>
    <string name="cambia_password"><u>Cambia Password</u></string>
    <string name="title">Seleziona l\'ora</string>
    <string name="positive_button_text">Conferma</string>
    <string name="negative_button_text">Annulla</string>
    <string name="username">USERNAME</string>
    <string name="valutazione"><u>%s</u></string>
    <string name="infoApp">Benvenuto nella sezione \"Info Applicazione\"! \nQui troverai informazioni dettagliate sulla nostra app per la gestione della biblioteca.\n\nNome App: BiblioApp\nVersione: 1.0.0\nSviluppata da: Agency-G\nData di rilascio: 05/07/2023\n\nDescrizione:\nBiblioApp è un\'applicazione completa per la gestione di una biblioteca. Ti permette di tenere traccia dei tuoi libri, organizzare la tua collezione, trovare nuovi titoli e molto altro. Siamo dedicati a fornire un\'esperienza di gestione dei libri semplice ed efficiente.\n\nFunzionalità principali:\n- Ricerca rapida dei libri per titolo, autore o genere.\n- Aggiunta e rimozione di libri dalla tua lista personale.\n- Informazioni dettagliate sui libri, inclusa la copertina, la descrizione e le recensioni degli utenti.\n- Opzioni di personalizzazione, inclusa la scelta del tema tra luce e scuro.\n- Possibilità di poter scaricare sul proprio dispositivo interi libri in formato PDF ed audiolibri\n\n Grazie per aver scelto BiblioApp!\n\n</string>
    <string name="nome">NOME:</string>
    <string name="autore">AUTORE:</string>
    <string name="visualizza_account">Visualizza account</string>
    <string name="biblioapp">BiblioApp</string>
    <string name="visualizza_notifiche">Visualizza notifiche</string>
    <string name="visualizza_menu">Visualizza menu</string>
    <string name="titolo">TITOLO</string>
    <string name="autoreDonaLibro">AUTORE</string>
    <string name="stato">STATO</string>
    <string name="ottimo">OTTIMO</string>
    <string name="buono">BUONO</string>
    <string name="discreto">DISCRETO</string>
    <string name="descrizione">DESCRIZIONE</string>
    <string name="infoDonaLibro">Prima di essere aggiunto alla nostra biblioteca la tua comunicazione verrà valutata e sarà accettata o meno</string>
    <string name="dona">DONA</string>
    <string name="infoFeedback">Aiutaci a migliorare la nostra libreria, scrivi quì il tuo feedback o qualsiasi problema tu abbia riscontrato</string>
    <string name="invia">Invia</string>
    <string name="password_attuale">Password attuale</string>
    <string name="nuova_password">Nuova Password</string>
    <string name="ripeti_nuova_password">Ripeti Nuova Password</string>
    <string name="conferma">CONFERMA</string>
    <string name="news">NEWS</string>
    <string name="top_10">TOP 10</string>
    <string name="nuove_uscite">NUOVE USCITE</string>
    <string name="gestione_accesso">Gestione Accesso</string>
    <string name="tema_scuro">TEMA SCURO</string>
    <string name="info_applicazione">Info applicazione</string>
    <string name="cartacei">CARTACEI</string>
    <string name="digitali">DIGITALI</string>
    <string name="audiolibri">AUDIOLIBRI</string>
    <string name="prenota">PRENOTA</string>
    <string name="disponibilita">Cliccando su \"NOTIFICA DISPONIBILITA\'\" verrai avvisato quando il libro tornerà disponibile.</string>
    <string name="lascia_una_recensione">LASCIA UNA RECENSIONE</string>
    <string name="usernameLogin">Username</string>
    <string name="passwordLogin">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_in1">Log In</string>
    <string name="non_hai_un_account">Non hai un account?</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="dona_libro">DONA LIBRO</string>
    <string name="prenota_posto">PRENOTA POSTO</string>
    <string name="lascia_un_feedback">LASCIA UN FEEDBACK</string>
    <string name="prestiti">PRESTITI</string>
    <string name="impostazioni">IMPOSTAZIONI</string>
    <string name="modifica">MODIFICA</string>
    <string name="nomeModifica">NOME</string>
    <string name="cognomeModifica">COGNOME</string>
    <string name="sessoModifica">SESSO</string>
    <string name="indirizzoModifica">INDIRIZZO</string>
    <string name="etaModifica">ETA\'</string>
    <string name="cellulareModifica">CELLULARE</string>
    <string name="emailModifica">EMAIL</string>
    <string name="inserisci_m_o_f">Inserisci \'M\' o \'F\'</string>
    <string name="confermaModifica">CONFERMA</string>
    <string name="clicca_sulle_icone_per_compilare_i_campi">Clicca sulle icone per compilare i campi</string>
    <string name="giorno">GIORNO:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="ora_inizio">ORA INIZIO:</string>
    <string name="_00_00">00:00</string>
    <string name="ora_fine">ORA FINE:</string>
    <string name="_00_00_1">00:00</string>
    <string name="prenotaPosto">PRENOTA</string>
    <string name="prestiti_in_corso">Prestiti in corso</string>
    <string name="prestiti_passati">Prestiti passati</string>
    <string name="registrati">REGISTRATI</string>
    <string name="nomeRegistrazione">NOME</string>
    <string name="cognomeRegistrazione">COGNOME</string>
    <string name="sesso">SESSO</string>
    <string name="indirizzo">INDIRIZZO</string>
    <string name="eta">ETA\'</string>
    <string name="cellulare">CELLULARE</string>
    <string name="email">EMAIL</string>
    <string name="usernameRegistrazione">USERNAME</string>
    <string name="passwordRegistrazione">PASSWORD</string>
    <string name="ripeti_password">RIPETI PASSWORD</string>
    <string name="uomo">Uomo</string>
    <string name="donna">Donna</string>
    <string name="nomeAudiolibro">NOME:</string>
    <string name="autoreAudiolibro">AUTORE:</string>
    <string name="book_title">Book Title</string>
    <string name="nomeDigitale">NOME:</string>
    <string name="autoreDigitale">AUTORE:</string>
    <string name="rinnova">RINNOVA</string>
    <string name="elimina_account"><u>Elimina Account</u></string>


</resources>