<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCambiaPassord"
            style="@style/TEXTLIBRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:fontFamily="@font/cagliostro"
            android:minHeight="48dp"
            android:text="@string/cambia_password"
            android:textAlignment="center"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            style="@style/BACKGROUNDLIBRO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tvUsername"
                style="@style/TEXTLIBRO"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cagliostro"
                android:gravity="center"
                android:text="@string/username"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/TEXTLIBRO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/cagliostro"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvCambiaUsername"
                style="@style/TEXTLIBRO"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/cagliostro"
                android:minHeight="48dp"
                android:text="@string/cambia_username"
                android:textAlignment="center" />
        </LinearLayout>

        <EditText
            android:id="@+id/etVecchiaPassword"
            style="@style/BACKGROUNDLIBRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/cagliostro"
            android:hint="@string/password_attuale"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center" />

        <LinearLayout
            style="@style/BACKGROUNDLIBRO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNuovaPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:fontFamily="@font/cagliostro"
                android:hint="@string/nuova_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etRipetiNuovaPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:fontFamily="@font/cagliostro"
                android:hint="@string/ripeti_nuova_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConfermaCredenziali"
            style="@style/BOTTONE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/cagliostro"
            android:minHeight="48dp"
            android:text="@string/conferma" />

    </LinearLayout>

</ScrollView>