<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/accountIv"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        style="@style/ICONPROFILO" />

    <EditText
        android:id="@+id/userLoginEt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        style="@style/BACKGROUNDLOGIN"
        android:ems="10"
        android:fontFamily="@font/cagliostro"
        android:gravity="center"
        android:hint="@string/usernameLogin"
        android:inputType="textPersonName"
        android:maxLength="30" />

    <EditText
        android:id="@+id/passwordLoginEt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        style="@style/BACKGROUNDLOGIN"
        android:ems="10"
        android:fontFamily="@font/cagliostro"
        android:gravity="center"
        android:hint="@string/passwordLogin"
        android:inputType="textPassword"
        android:maxLength="30" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        style="@style/BOTTONE"
        android:fontFamily="@font/cagliostro"
        android:text="@string/log_in"
        android:textStyle="bold" />

</LinearLayout>