<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/accountIv"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        style="@style/ICONPROFILO" />

    <Button
        android:id="@+id/loginRegistrazioneBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        style="@style/BOTTONE"
        android:fontFamily="@font/cagliostro"
        android:text="@string/log_in1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registrazioneTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/TEXTLIBRO"
        android:fontFamily="@font/cagliostro"
        android:text="@string/non_hai_un_account"
        android:textAlignment="center"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/RegistratiCliccabileTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        style="@style/TEXTLIBRO"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:fontFamily="@font/cagliostro"
        android:minHeight="48dp"
        android:text="@string/registrati_ora"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:ignore="TouchTargetSizeCheck" />
</LinearLayout>